src/test/deca/syntax/invalid/custom/missing_semi.deca
// Description:
//    tests de programme incorrect lexicalement (point-vrigule manquant)
//
// Resultats:
//    ligne 10 : Erreur, chaine point-vrigule manquant (sur fin de fichier)
//
// Historique:
//    cree le 06/01/2022

int i = 5
